--- a/src/app/views/empresa/empresa.component.html
+++ b/src/app/views/empresa/empresa.component.html
@@ -8,8 +8,8 @@
                 <p id="tituloCab">GAMEMANIA</p>
             </div>
             <div class="col-md-4 text-end">
-                <img class="img-fluid" id="iconeUsuario" src="./assets/img/icones/user_32x32.png">
-                <img class="img-fluid" id="iconeCarrinho" src="./assets/img/icones/carrinho_32x32.png">
+                <a href="#" id="botaoUsuario"><img class="img-fluid" id="iconeUsuario" src="./assets/img/icones/user_32x32.png"></a>
+                <a [routerLink]="['carrinho/']"><img class="img-fluid" id="iconeCarrinho" src="./assets/img/icones/carrinho_32x32.png"></a>
             </div>
         </div>
     </div>
