--- a/src/app/views/carrinho/carrinho.component.html
+++ b/src/app/views/carrinho/carrinho.component.html
@@ -5,11 +5,11 @@
                 <img class="img-fluid" src="./assets/img/icones/controle-de-video-game.png">
             </div>
             <div class="col-md-4 text-center">
-                <a href="#"><p id="tituloCab">GAMEMANIA</p></a>
+                <p id="tituloCab">GAMEMANIA</p>
             </div>
             <div class="col-md-4 text-end">
               <a href="#" id="botaoUsuario"><img class="img-fluid" id="iconeUsuario" src="./assets/img/icones/user_32x32.png"></a>
-              <a [routerLink]="['../carrinho/']"><img class="img-fluid" id="iconeCarrinho" src="./assets/img/icones/carrinho_32x32.png"></a>
+              <a [routerLink]="['carrinho/']"><img class="img-fluid" id="iconeCarrinho" src="./assets/img/icones/carrinho_32x32.png"></a>
           </div>
         </div>
     </div>
@@ -48,14 +48,52 @@
 </header>
 
 <main>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
 
-  <div class="container">
-      <div class="row" id="quadroDescricao">
-      </div>
-      <form>
-        <button id="botaoIncluirCar" class="btn btn-secondary btn-lg btn-block" type="button" (click)="criarCarrinho()">COMPRAR</button>
-      </form>
-  </div>
+                    <div class="d-flex align-items-center p-3 my-3 text-white tituloSecao">
+                      <h1>CARRINHO DE COMPRAS</h1>
+                    </div>
+
+                    <table id="tabelaCarrinho" mat-table class="table table-responsive-lg table-dark table-hover " matSort aria-label="Elements" [dataSource]="carrinho">
+                        <ng-container matColumnDef="id">
+                              <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+                              <td mat-cell *matCellDef="let row">{{row.id}}</td>
+                        </ng-container> 
+
+                        <ng-container matColumnDef="nome">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header>Descrição</th>
+                          <td mat-cell *matCellDef="let row">{{row.nome}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="preco">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Preco</th>
+                            <td mat-cell *matCellDef="let row">{{row.preco}}</td>
+                        </ng-container>
+
+                        
+                        <ng-container matColumnDef="quantidade">
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header>Quantidade</th>
+                          <td mat-cell *matCellDef="let row">{{row.quantidade}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="action">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Ação</th>
+                            <td mat-cell *matCellDef="let row">
+                              <button type="button" (click)="deleta(row.id)">
+                                <i class="material-icons">delete</i>
+                              </button>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
+                </div>
+
+        </div>
+    </div>
 
 </main>
   <footer class="container">
@@ -67,7 +105,7 @@
           </div>
           <div class="input-group">
               <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-              <button  class="btn btn-outline-secondary" type="submit">INSCREVER-SE</button>
+              <button class="btn btn-outline-secondary" type="submit">INSCREVER-SE</button>
           </div>
       </div>
   
