--- a/src/app/views/lojas/lojas.component.html
+++ b/src/app/views/lojas/lojas.component.html
@@ -8,8 +8,8 @@
                 <p id="tituloCab">GAMEMANIA</p>
             </div>
             <div class="col-md-4 text-end">
-                <img class="img-fluid" id="iconeUsuario" src="./assets/img/icones/user_32x32.png">
-                <img class="img-fluid" id="iconeCarrinho" src="./assets/img/icones/carrinho_32x32.png">
+                <a href="#" id="botaoUsuario"><img class="img-fluid" id="iconeUsuario" src="./assets/img/icones/user_32x32.png"></a>
+                <a [routerLink]="['carrinho/']"><img class="img-fluid" id="iconeCarrinho" src="./assets/img/icones/carrinho_32x32.png"></a>
             </div>
         </div>
     </div>
@@ -122,8 +122,8 @@
             <h1 class="topicoRodape">INSTITUCIONAL</h1>
             <ul class="list-group">
                 <li class="list-group-item"><a href="https://www.procon.df.gov.br/wp-content/uploads/2019/08/Codigo-do-consumidor-FINAL.pdf" target="_blank">Defesa do consumidor</a></li>
-                <li class="list-group-item"><a href="empresa.html">Empresa</a></li>
-                <li class="list-group-item"><a href="lojas.html">Nossas Lojas</a></li>
+                <li class="list-group-item"><a routerLink="../empresa">Empresa</a></li>
+                <li class="list-group-item"><a routerLink="../lojas">Nossas Lojas</a></li>
               </ul>
         </div>
         <div class="col-lg-3">
